fixes text overflow under clear button

--- a/src/indigo/less/search.less
+++ b/src/indigo/less/search.less
@@ -12,6 +12,7 @@
 
   &-input {
     padding-left: 34px;
+    padding-right: 40px;
     font-size: 16px;
     width: 100%;
   }
